--- a/package.json
+++ b/package.json
@@ -1,49 +1,54 @@
 {
-  "name": "saude-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
-    "ngx-mask": "^19.0.6",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
-    "@types/jasmine": "~5.1.0",
-    "angular-eslint": "19.3.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.5",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.3",
-    "prettier": "3.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.2.2",
-    "typescript-eslint": "8.27.0"
-  }
+	"name": "saude-app",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test",
+		"test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
+		"lint": "ng lint",
+		"lint:fix": "ng lint --fix",
+		"format": "npx prettier . --write",
+		"prepare": "husky"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^17.0.0",
+		"@angular/common": "^17.0.0",
+		"@angular/compiler": "^17.0.0",
+		"@angular/core": "^17.0.0",
+		"@angular/forms": "^17.0.0",
+		"@angular/platform-browser": "^17.0.0",
+		"@angular/platform-browser-dynamic": "^17.0.0",
+		"@angular/router": "^17.0.0",
+		"ngx-mask": "^19.0.6",
+		"rxjs": "~7.8.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.14.2"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^17.0.0",
+		"@angular/cli": "^17.0.0",
+		"@angular/compiler-cli": "^17.0.0",
+		"@types/jasmine": "~5.1.0",
+		"angular-eslint": "19.3.0",
+		"autoprefixer": "^10.4.21",
+		"eslint": "^9.23.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-prettier": "^5.2.5",
+		"husky": "^9.1.7",
+		"jasmine-core": "~5.1.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.2.0",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"postcss": "^8.5.3",
+		"prettier": "3.5.3",
+		"tailwindcss": "^3.4.17",
+		"typescript": "~5.2.2",
+		"typescript-eslint": "8.27.0"
+	}
 }
