--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"@angular/platform-browser": "^17.0.0",
 		"@angular/platform-browser-dynamic": "^17.0.0",
 		"@angular/router": "^17.0.0",
+		"jwt-decode": "^4.0.0",
 		"ngx-mask": "^19.0.6",
+		"ngx-webstorage": "^13.0.1",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.2"
