--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@angular/router": "^17.0.0",
 		"@ng-icons/core": "^26.5.0",
 		"@ng-icons/heroicons": "^31.2.0",
+		"@ngrx/effects": "^17.2.0",
+		"@ngrx/store": "^17.2.0",
 		"jwt-decode": "^4.0.0",
 		"ngx-mask": "^19.0.6",
 		"ngx-webstorage": "^13.0.1",
